k8s/database-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: database-service
  namespace: hireflow

spec:
  type: ClusterIP

  selector:
    app: database

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
